--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
         "postgres":{
         "user":"postgres",
         "password":"Viser12345",
-        "host":"local hello host",
+        "host":"localhost",
         "port":3030,
         "database":"api"
     }
